--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "npm start": "ng serve",
+    "npm test": "npm test --code-coverage"
   },
   "private": true,
   "dependencies": {
